# cliff-detection

./: .gitignore  CMakeLists.txt  package.xml
config/: cliff_detect.yaml
include/: mrobot_cliff_detection.h
launch/: run.launch
src/: main.cpp
